--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-REACT_APP_REDIRECT=http://localhost:3000
+REACT_APP_REDIRECT=
 # Récupération ID de l'application créée avec spotify
 REACT_APP_SPOTIFY_ID=
